# JhBase

./: CMakeLists.txt  README.md
include/JhBase/: Slice.h
src_unittest/: Slice_unittest.cpp
